--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.h2.console.enabled=true
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
 
+#Csv Configuration
+spring.csv.delimiter=;
